--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
+    "react-big-calendar": "^0.23.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
     "react-modal": "^3.11.1",
     "react-notifications": "^1.4.3",
+    "react-private-route": "^1.1.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-select": "^3.0.8",
     "react-table": "^6.10.3",
+    "routes": "^2.1.0",
     "sweetalert2": "^9.3.16",
     "sweetalert2-react-content": "^2.0.2"
   },
