--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "react": "^16.12.0",
     "react-big-calendar": "^0.23.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-datepicker": "^2.11.0",
     "react-dates": "^21.7.0",
+    "react-datetime": "^2.16.3",
+    "react-datetime-picker": "^2.9.0",
+    "react-datetime-range-picker": "^2.0.5",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-notifications": "^1.4.3",
@@ -22,6 +26,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
+    "react-stepzilla": "^6.0.2",
     "react-table": "^6.10.3",
     "routes": "^2.1.0",
     "sweetalert2": "^9.3.16",
